--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./css/login.css"/>
   <link rel="stylesheet" href="./css/signUp.css"/>
   <link rel="stylesheet" href="./css/home.css"/>
+  <link rel="stylesheet" href="./css/check.css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300&display=swap" rel="stylesheet">
