--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,6 @@
 <body>
   <div id="root"></div>
   <script type="module" src="main.js"></script>
+  <script src="https://kit.fontawesome.com/a8666cfa76.js" crossorigin="anonymous"></script>
 </body>
 </html>
